fix(socials): fix too much margin in the icons caused by inherited font size

--- a/src/ContactMe.scss
+++ b/src/ContactMe.scss
@@ -55,6 +55,10 @@
         flex-direction: column;
     }
 
+    a {
+        font-size: 2rem;
+    }
+
     img {
         width: 2rem;
         aspect-ratio: 1/1;
