--- a/src/index.scss
+++ b/src/index.scss
@@ -95,6 +95,6 @@ button:focus-visible {
     align-items: center;
 }
 
-.text-left {
+.text-right {
     text-align: left;
 }
